[package]
name = "korium"
version = "0.2.0"
edition = "2024"
description = "Batteries-included adaptive networking fabric"
license = "MIT"
repository = "https://github.com/magikrun/korium"
readme = "README.md"
keywords = ["nextgen", "network", "fabric"]
categories = ["network-programming"]
authors = ["Flavio Aiello"]

[features]
default = []
# Reduced PoW difficulty for faster tests. NEVER use in production.
test-pow = []
# Enables SPIFFE-compatible X.509 SAN URIs and distributed threshold CA.
# Includes: SPIFFE ID generation/extraction, FROST K-of-N threshold signatures.
# Does NOT change Korium's identity model - adds enterprise interoperability layer.
spiffe = ["frost-ed25519"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
blake3 = "1.5"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pem"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
x509-parser = "0.16"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
bincode = "1.3"
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Threshold CA (FROST signatures)
frost-ed25519 = { version = "2.2", optional = true }

[dev-dependencies]
korium = { path = ".", features = ["test-pow"] }


[[example]]
name = "chatroom"